==> flyghost/OneOS-V2.1.0/drivers/hal/nrf/drivers/drv_uart.c <==
#include <stdio.h>
#include <bus/bus.h>
#include <dma/dma.h>
#include <board.h>
#include <os_memory.h>
#include "drv_uart.h"
#include "drv_gpio.h"
#define DMA_RX_MAX_SIZE 0xFF

static os_uint32_t nrf5_sdma_dma_get_index(soft_dma_t *dma)
{
    os_base_t level;
    
    nrf5_uart_t *uart = os_container_of(dma, nrf5_uart_t, sdma);

    if (uart->huart->uart.p_reg->EVENTS_RXDRDY)
    {
        uart->huart->uart.p_reg->EVENTS_RXDRDY = 0;
        
        if (++uart->rx_head_temp == uart->rx_size)
            uart->rx_head_temp = 0;
    }
    else if (uart->rx_head_stamp != uart->rx_head_temp)
    {
        level = os_irq_lock();
        
        nrfx_uarte_rx_abort(&uart->huart->uart);
        
        while(!nrf_uarte_event_check(uart->huart->uart.p_reg, NRF_UARTE_EVENT_ENDRX));

        uart->rx_head      += nrf_uarte_rx_amount_get(uart->huart->uart.p_reg);
        uart->rx_head_temp  = uart->rx_head;
        uart->rx_head_stamp = uart->rx_head;

        uart->rx_head_next  = uart->rx_head;
        if (uart->rx_head_next >= uart->rx_size)
            uart->rx_head_next = 0;
        
        uint32_t rx_space_remain = uart->rx_size - uart->rx_head;
        uint32_t rx_size = min(rx_space_remain, DMA_RX_MAX_SIZE);

        _nrfx_uarte_rx(uart, rx_size);

        rx_space_remain -= rx_size;

        if (rx_space_remain > 0)
        {
            _nrfx_uarte_rx(uart, min(rx_space_remain, DMA_RX_MAX_SIZE));
        }
        else
        {
            _nrfx_uarte_rx(uart, min(uart->rx_size, DMA_RX_MAX_SIZE));
        }

        os_irq_unlock(level);
    }
    
    return uart->rx_head_temp;
}

static os_err_t nrf5_sdma_dma_start(soft_dma_t *dma, void *buff, os_uint32_t size)
{
    nrf5_uart_t *uart = os_container_of(dma, nrf5_uart_t, sdma);

    OS_ASSERT(size <= (DMA_RX_MAX_SIZE * 2));

    if (uart->rx_state != UARTE_RECV_IDLE)
        return OS_EOK;

    uart->rx_state = UARTE_RECV_SART;
    
    uart->rx_buffer = buff;
    uart->rx_size = size;
    uart->rx_head = 0;
    uart->rx_head_temp = 0;
    uart->rx_head_next = 0;

    _nrfx_uarte_rx(uart, size / 2);
    _nrfx_uarte_rx(uart, size / 2);

    return OS_EOK;
}

static os_uint32_t nrf5_sdma_dma_stop(soft_dma_t *dma)
{

    nrf5_uart_t *uart = os_container_of(dma, nrf5_uart_t, sdma);

    nrfx_uarte_rx_abort(&uart->huart->uart);
    while(!nrf_uarte_event_check(uart->huart->uart.p_reg, NRF_UARTE_EVENT_ENDRX));

    uart->rx_head += nrf_uarte_rx_amount_get(uart->huart->uart.p_reg);
   
    uart->rx_state = UARTE_RECV_IDLE;

    return uart->rx_head;
}

static void nrf5_uart_sdma_callback(soft_dma_t *dma)
{
    nrf5_uart_t *uart = os_container_of(dma, nrf5_uart_t, sdma);
    
    os_hw_serial_isr_rxdone((struct os_serial_device *)uart);
}

static os_err_t nrf5_uart_init(struct os_serial_device *serial, struct serial_configure *cfg)
{
    nrfx_uarte_config_t config = NRFX_UARTE_DEFAULT_CONFIG;
    struct nrf5_uart *uart;

    OS_ASSERT(serial != OS_NULL);
    OS_ASSERT(cfg != OS_NULL);

    uart = os_container_of(serial, struct nrf5_uart, serial_dev);
    if(uart->huart == OS_NULL)
        return OS_ERROR;

    if(uart->isInit)
    {
        nrfx_uarte_uninit(&uart->huart->uart);
        uart->isInit = FALSE;
    }

    switch (cfg->baud_rate)
    {
        case BAUD_RATE_2400:
            config.baudrate = NRF_UARTE_BAUDRATE_2400;
            break;
        case BAUD_RATE_4800:
            config.baudrate = NRF_UARTE_BAUDRATE_4800;
            break;
        case BAUD_RATE_9600:
            config.baudrate = NRF_UARTE_BAUDRATE_9600;
            break;
        case BAUD_RATE_19200:
            config.baudrate = NRF_UARTE_BAUDRATE_19200;
            break;
        case BAUD_RATE_38400:
            config.baudrate = NRF_UARTE_BAUDRATE_38400;
            break;
        case BAUD_RATE_57600:
            config.baudrate = NRF_UARTE_BAUDRATE_57600;
            break;
        case BAUD_RATE_115200:
            config.baudrate = NRF_UARTE_BAUDRATE_115200;
            break;
        case BAUD_RATE_230400:
            config.baudrate = NRF_UARTE_BAUDRATE_230400;
            break;
        case BAUD_RATE_460800:
            config.baudrate = NRF_UARTE_BAUDRATE_460800;
            break;
        case BAUD_RATE_921600:
            config.baudrate = NRF_UARTE_BAUDRATE_921600;
            break;
        case BAUD_RATE_2000000:
        case BAUD_RATE_3000000:
            return -OS_EINVAL;
        default:
            config.baudrate = NRF_UARTE_BAUDRATE_115200;
            break;
    }

    if (cfg->parity == PARITY_NONE)
    {
        config.parity = NRF_UARTE_PARITY_EXCLUDED;
    }
    else
    {
        config.parity = NRF_UARTE_PARITY_INCLUDED;
    }
    
    config.hwfc = NRF_UARTE_HWFC_DISABLED;
    nrf_gpio_cfg_default(uart->huart->rx_pin);
    nrf_gpio_cfg_default(uart->huart->tx_pin);
    config.pselrxd = uart->huart->rx_pin;
    config.pseltxd = uart->huart->tx_pin;
    config.p_context = (void *)uart;
    
    nrfx_uarte_init(&uart->huart->uart,
                                     (nrfx_uarte_config_t const *)&config,
                                     nrf5_uarte_evt_handler);
    uart->isInit = TRUE;

    nrf5_uart_sdma_init(uart, &serial->rx_fifo->ring);

    return OS_EOK;
}

static int nrf5_uart_start_send(struct os_serial_device *serial, const os_uint8_t *buff, os_size_t size)
{
    int ret;
    struct nrf5_uart *uart;

    OS_ASSERT(serial != OS_NULL);

    uart = os_container_of(serial, struct nrf5_uart, serial_dev);

    OS_ASSERT(uart != OS_NULL);
    
    uart->tx_size = size;
    uart->poll_send = false;
    ret = nrfx_uarte_tx(&uart->huart->uart,buff, size);

    return (ret == NRFX_SUCCESS ? size : 0);

}

static int nrf5_uart_poll_send(struct os_serial_device *serial, const os_uint8_t *buff, os_size_t size)
{
    int ret;
    int i;
    struct nrf5_uart *uart;
    uint8_t data;

    OS_ASSERT(serial != OS_NULL);

    uart = os_container_of(serial, struct nrf5_uart, serial_dev);

    OS_ASSERT(uart != OS_NULL);
    uart->tx_size = 0;
    uart->poll_send = true;

    for (i = 0; i < size; i++)
    {
        data = buff[i];

        os_base_t level = os_irq_lock();

        nrfx_uarte_tx(&uart->huart->uart, &data, 1);

        while (!nrf_uarte_event_check(uart->huart->uart.p_reg, NRF_UARTE_EVENT_ENDTX));

        nrfx_uarte_tx_abort(&uart->huart->uart);

        os_irq_unlock(level);
    }

    ret = size;
    
    uart->tx_size = 0;

    return ret;
}

static os_err_t nrf5_uart_deinit(struct os_serial_device *serial)
{
    struct nrf5_uart *uart;

    OS_ASSERT(serial != OS_NULL);

    uart = os_container_of(serial, struct nrf5_uart, serial_dev);
    if(uart->huart == OS_NULL)
        return OS_ERROR;

    /* rx */
    if(uart->isInit)
    {
        nrfx_uarte_uninit(&uart->huart->uart);
        uart->isInit = FALSE;

        soft_dma_stop(&uart->sdma);
    }

    /* tx */
    nrfx_uarte_tx_abort(&uart->huart->uart);
    
    return OS_EOK;
}

void __os_hw_console_output(char *str)
{
    if (console_uart == OS_NULL)
        return;

#if 0
    while (*str)
    {
        nrfx_uarte_tx(&console_uart->uart, (os_uint8_t *)str, 1);
        str++;
    }
#endif
}
