==> flyghost/OneOS-V2.1.0/drivers/hal/nxp/imxrt10xx/drivers/drv_uart.c <==
#include <board.h>
#include <os_memory.h>
#include <bus/bus.h>
#include <dma/dma.h>
#include "fsl_lpuart.h"
#include "fsl_lpuart_edma.h"
#include "fsl_dmamux.h"
#include "drv_uart.h"
#define DRV_EXT_LVL DBG_EXT_INFO
#define DRV_EXT_TAG "drv.usart"
#include <drv_log.h>

static os_uint32_t imxrt_sdma_dma_get_index(soft_dma_t *dma)
{
    status_t status = kStatus_Success;

    imxrt_uart_t *imxrt_uart = os_container_of(dma, imxrt_uart_t, sdma);

    if (imxrt_uart->edma_handle->rxEdmaHandle != OS_NULL && imxrt_uart->edma_handle != OS_NULL)
    {
        imxrt_uart->rx_index = imxrt_uart->receiveXfer.dataSize - EDMA_GetRemainingMajorLoopCount(imxrt_uart->rxdma_base, imxrt_uart->rxdma_channel);
        if (imxrt_uart->rx_index == imxrt_uart->receiveXfer.dataSize)
        {
            imxrt_uart->rx_index = 0;
        }
    }
    
    return imxrt_uart->rx_index;
}

static os_err_t imxrt_sdma_dma_start(soft_dma_t *dma, void *buff, os_uint32_t size)
{
    status_t status = kStatus_Success;
    edma_transfer_config_t xferConfig;
    
    imxrt_uart_t *imxrt_uart = os_container_of(dma, imxrt_uart_t, sdma);
    
    imxrt_uart->sdma_hard_size = size;
    imxrt_uart->receiveXfer.data = buff;
    imxrt_uart->receiveXfer.dataSize = size;
    imxrt_uart->rx_index = 0;
    
    if (imxrt_uart->edma_handle->rxEdmaHandle != OS_NULL && imxrt_uart->edma_handle != OS_NULL)
    {
        EDMA_InstallTCDMemory(imxrt_uart->edma_handle->rxEdmaHandle, imxrt_uart->tcdMemoryPoolPtr, 1U);
        
        EDMA_PrepareTransfer(&xferConfig, (void *)(uint32_t *)LPUART_GetDataRegisterAddress(imxrt_uart->uart_info->uart_base),
                         sizeof(uint8_t), buff, sizeof(uint8_t), sizeof(uint8_t), size,
                         kEDMA_PeripheralToMemory);
        
        imxrt_uart->edma_handle->rxEdmaHandle->tcdUsed = 1U;
        imxrt_uart->edma_handle->rxEdmaHandle->tail    = 0U;
        
        EDMA_TcdReset(&imxrt_uart->edma_handle->rxEdmaHandle->tcdPool[0U]);
        EDMA_TcdSetTransferConfig(&imxrt_uart->edma_handle->rxEdmaHandle->tcdPool[0U], &xferConfig, imxrt_uart->tcdMemoryPoolPtr);
        
        imxrt_uart->edma_handle->rxEdmaHandle->tcdPool[0U].CSR |= DMA_CSR_INTMAJOR_MASK | DMA_CSR_INTHALF_MASK;

        EDMA_InstallTCD(imxrt_uart->edma_handle->rxEdmaHandle->base, imxrt_uart->edma_handle->rxEdmaHandle->channel, &imxrt_uart->edma_handle->rxEdmaHandle->tcdPool[0U]);

        EDMA_SetCallback(imxrt_uart->edma_handle->rxEdmaHandle, imxrt_uart_dma_rx_callback, imxrt_uart);

        EDMA_StartTransfer(imxrt_uart->edma_handle->rxEdmaHandle);
        
        LPUART_EnableRxDMA(imxrt_uart->uart_info->uart_base, true);
        
        LPUART_EnableInterrupts(imxrt_uart->uart_info->uart_base, kLPUART_IdleLineInterruptEnable);
        EnableIRQ(imxrt_uart->irqn);
    }
    
    return (status == kStatus_Success) ? OS_EOK : OS_ERROR;
}

static os_uint32_t imxrt_sdma_dma_stop(soft_dma_t *dma)
{
    status_t status = kStatus_Success;

    imxrt_uart_t *imxrt_uart = os_container_of(dma, imxrt_uart_t, sdma);

    if (imxrt_uart->edma_handle->rxEdmaHandle != OS_NULL && imxrt_uart->edma_handle != OS_NULL)
    {
        imxrt_uart->rx_index = imxrt_uart->receiveXfer.dataSize - EDMA_GetRemainingMajorLoopCount(imxrt_uart->rxdma_base, imxrt_uart->rxdma_channel);
        if (imxrt_uart->rx_index == imxrt_uart->receiveXfer.dataSize)
        {
            imxrt_uart->rx_index = 0;
        }
        
        EDMA_StopTransfer(imxrt_uart->edma_handle->rxEdmaHandle);
        
        LPUART_EnableRxDMA(imxrt_uart->uart_info->uart_base, false);
    }
    
    return imxrt_uart->rx_index;
}

static void imxrt_uart_sdma_callback(soft_dma_t *dma)
{
    imxrt_uart_t *imxrt_uart = os_container_of(dma, imxrt_uart_t, sdma);

    os_hw_serial_isr_rxdone((struct os_serial_device *)imxrt_uart);
}

static os_err_t imxrt_uart_init(struct os_serial_device *serial, struct serial_configure *cfg)
{
    os_uint32_t rx_bufsz = 0;
    
    struct os_imxrt_uart *imxrt_uart;
    lpuart_config_t config;

    OS_ASSERT(serial != OS_NULL);
    OS_ASSERT(cfg != OS_NULL);

    imxrt_uart = os_container_of(serial, struct os_imxrt_uart, serial);
    
    imxrt_uart->tcdMemoryPoolPtr = (edma_tcd_t *)os_dma_malloc_align(sizeof(edma_tcd_t), 32);
    
    LPUART_GetDefaultConfig(&config);
    config.baudRate_Bps = cfg->baud_rate;

    switch (cfg->data_bits)
    {
    case DATA_BITS_7:
        config.dataBitsCount = kLPUART_SevenDataBits;
        break;

    default:
        config.dataBitsCount = kLPUART_EightDataBits;
        break;
    }

    switch (cfg->stop_bits)
    {
    case STOP_BITS_2:
        config.stopBitCount = kLPUART_TwoStopBit;
        break;
    default:
        config.stopBitCount = kLPUART_OneStopBit;
        break;
    }

    switch (cfg->parity)
    {
    case PARITY_ODD:
        config.parityMode = kLPUART_ParityOdd;
        break;
    case PARITY_EVEN:
        config.parityMode = kLPUART_ParityEven;
        break;
    default:
        config.parityMode = kLPUART_ParityDisabled;
        break;
    }

    config.enableTx = true;
    config.enableRx = true;

    LPUART_Init(imxrt_uart->uart_info->uart_base, &config, imxrt_uart->clk_src);
    
    imxrt_usart_sdma_init(imxrt_uart, &serial->rx_fifo->ring);

    return OS_EOK;
}

static os_err_t imxrt_uart_deinit(struct os_serial_device *serial)
{
    struct os_imxrt_uart *imxrt_uart;

    OS_ASSERT(serial != OS_NULL);

    imxrt_uart = os_container_of(serial, struct os_imxrt_uart, serial);
    
    soft_dma_stop(&imxrt_uart->sdma);

    /* tx */
    if (imxrt_uart->edma_handle->txEdmaHandle != OS_NULL && imxrt_uart->edma_handle != OS_NULL)
    {
        LPUART_TransferAbortSendEDMA(imxrt_uart->uart_info->uart_base, imxrt_uart->edma_handle);
    }
    else if (imxrt_uart->handle != OS_NULL)
    {
        LPUART_TransferAbortSend(imxrt_uart->uart_info->uart_base, imxrt_uart->handle);
    }

    return OS_EOK;
}

static int imxrt_uart_start_send(struct os_serial_device *serial, const os_uint8_t *buff, os_size_t size)
{
    status_t status = kStatus_Success;

    struct os_imxrt_uart *imxrt_uart;

    OS_ASSERT(serial != OS_NULL);

    imxrt_uart = os_container_of(serial, struct os_imxrt_uart, serial);

    imxrt_uart->sendXfer.data = (os_uint8_t *)buff;
    imxrt_uart->sendXfer.dataSize = size;

    if (imxrt_uart->edma_handle->txEdmaHandle != OS_NULL && imxrt_uart->edma_handle != OS_NULL)
    {
        status = LPUART_SendEDMA(imxrt_uart->uart_info->uart_base, imxrt_uart->edma_handle, &imxrt_uart->sendXfer);
    }
    else if (imxrt_uart->handle != OS_NULL)
    {
        status = LPUART_TransferSendNonBlocking(imxrt_uart->uart_info->uart_base, imxrt_uart->handle, &imxrt_uart->sendXfer);
    }

    return (status == kStatus_Success) ? size : 0;
}

static int imxrt_uart_poll_send(struct os_serial_device *serial, const os_uint8_t *buff, os_size_t size)
{
    int i;
    os_base_t level;
    struct os_imxrt_uart *imxrt_uart;
    
    OS_ASSERT(serial != OS_NULL);

    imxrt_uart = os_container_of(serial, struct os_imxrt_uart, serial);

    for (i = 0; i < size; i++)
    {
        level = os_irq_lock();
        
        LPUART_WriteByte(imxrt_uart->uart_info->uart_base, buff[i]);
        while (!(LPUART_GetStatusFlags(imxrt_uart->uart_info->uart_base) & kLPUART_TxDataRegEmptyFlag));

        os_irq_unlock(level);
    }

    return size;
}

void __os_hw_console_output(char *str)
{
    if (console_uart == OS_NULL)
        return;
   while (*str)
   {        
       LPUART_WriteByte(console_uart,*str);
       while (!(LPUART_GetStatusFlags(console_uart) & kLPUART_TxDataRegEmptyFlag))
           ;
        
       str++;
   }
}
